--- a/less/stelselplaat.less
+++ b/less/stelselplaat.less
@@ -1,18 +1,18 @@
 
 /*!
- * ICTU / WP Stelselplaat plugin - stelselplaat.less
  * ----------------------------------------------------------------------------------
  * ICTU / WP Stelselplaat plugin
  * ----------------------------------------------------------------------------------
  * Plugin Name:   ICTU / WP Stelselplaat plugin
  * Plugin URI:    https://wbvb.nl/plugins/rhswp-stelselcatalogus/
  * Description:   De mogelijkheid om een stelselplaat te tonen op een pagina
- * Version:       0.0.2
- * Version desc:  eerste versie
+ * Version:       0.0.3
+ * Version desc:  Blokken donkerblauw_vol gemaakt. Velden via ACF.
  * Author:        Paul van Buuren
  * Author URI:    https://wbvb.nl
  * License:       GPL-2.0+
  * @link          http://wbvb.nl/themes/wp-rijkshuisstijl/
+ * ----------------------------------------------------------------------------------
  */
 
 
@@ -25,14 +25,29 @@
 
 .stelselplaat_css() {
   
-  .dojs .hide_js {
-    border: 1px solid red;
-  }
-  
-  
   div#kolom2  {
-//    background: rebeccapurple;
+    // this div has a specific ratio
     overflow: hidden;
+    background: @grijs_1;
+
+/*
+  	position: relative;
+  	padding-bottom: 56.25%; // 16:9 
+  	padding-top: 25px;
+  	height: 0;
+  	border: 10px solid red;    
+  	
+  	
+  	#adaptoratio {
+    	// this div adapts to the ratio of its parent
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    	border: 10px solid blue;    
+  	}
+*/
 
     abbr {
       border-bottom-style: none;
@@ -47,12 +62,6 @@
       width: inherit;
     }
     
-    .relaties {
-      img {
-        height: auto;
-        width: auto;
-      }
-    }
     
     h2,
     h3 {
@@ -72,15 +81,27 @@
       position: relative;
       height: 500px;
       margin: 0 20px 0 0;
+//      height: 100%;
+      z-index: 100;
       
       & > li {
         padding: 0;
         background: none;
         position: absolute;
         display: block;
-        width: 145px;
-        height: 125px;
         text-align: center;
+      }
+
+      .relaties {
+//        width: 100%;
+//        height: 100%;
+//        display: block;
+        
+        img {
+//          height: auto;
+          height: 500px;
+          width: auto;
+        }
       }
       
       li {
@@ -174,7 +195,6 @@
         
         &.active a {
           background: url("../images/bg-tab-active.png") no-repeat scroll 100% 0 transparent;
-          color: black;
           font-weight: bold;
           margin-right: -8px;
           text-decoration: none;
@@ -277,7 +297,7 @@
   .stelsel .nietgereed > a,
   .stelsel .nietgereed .ik h3,
   .zij a.nietgereed {
-    color: @txt !important;
+    color: @wit !important;
   }
 
   .stelsel .gereed,
@@ -287,7 +307,7 @@
   .mod.box ul li.gereed,
   .br ul li.gereed {
     background: @color_gereed;
-    color: @wit;
+    color: @wit !important;
   }
 
   .stelsel .nietgereed,
@@ -297,7 +317,7 @@
   .mod.box ul li.nietgereed,
   .br ul li.nietgereed {
     background: @color_nietgereed;
-    color: @txt;
+    color: @wit !important;
   }
   
   .stelsel .gereed > a,
@@ -620,7 +640,7 @@
   /* Legenda */
   .legenda {
     vertical-align: top;
-    background: @bg_ik;
+    background: @grijs_2;
     padding: 10px;
   
     &, li {
@@ -704,39 +724,37 @@ div.br ul {
   /* tans style*/
   
     
-.tab {
-  div.begrip {
-    clear: left;
-  }
-  ul.authentiekegegevens,
-  ul.gegevens,
-  ul.begrippen {
-    li {
-      float: left;
-      width: 48%;
-      margin-bottom: 0.5em;
-      padding: .1em .5em;
+  .tab {
+    div.begrip {
+      clear: left;
     }
-  }    
-}
-
-.stelsel .gereed .zie_ook ul {
-    color: #000000;
+    ul.authentiekegegevens,
+    ul.gegevens,
+    ul.begrippen {
+      li {
+        float: left;
+        width: 48%;
+        margin-bottom: 0.5em;
+        padding: .1em .5em;
+      }
+    }    
   }
-.mod.box .zie_ook ul li.external_link,
-.zie_ook ul li.external_link {
+
+
+  .mod.box .zie_ook ul li.external_link,
+  .zie_ook ul li.external_link {
     background: url("../images/directpijl.gif") no-repeat scroll 0 -3px transparent;
   }
 
-.zie_ook ul li {
+  .zie_ook ul li {
     margin-bottom: 0.5em;
     padding-left: 1.5em;
   }
-.stelsel .gereed .zie_ook,
-.stelsel .gereed .extra_tab {
+  .stelsel .gereed .zie_ook,
+  .stelsel .gereed .extra_tab {
     color: #000000;
   }
-.stelsel .mod.box ol {
+  .stelsel .mod.box ol {
     margin-left: 10px;
     padding-left: 20px;
   }
@@ -772,77 +790,88 @@ div.br ul {
       }
     }
   } // div#kolom2 
+
+  .stelsel {
+    
+    & > li {
+      width: 145px;
+      height: 125px;
+    }
+  }
 }
 
-
-// niet gebruikt
-div.begrippen-filter {
-  width: 200px;
-  position: absolute;
-  top: 0;
-  right: 30px;
-  z-index: 9;
-  background-color: #dfe6e1;
-  
-  border: 1px solid #becdc3;
-  
-  border-top: 0;
-  padding: 0;
-
-  h2 {
-    background-color: #becdc3;
-    margin: 0;
-    padding: 10px;
-    font-weight: normal;
-    line-height: 1.2;
-  }
-  h2:hover {
-    cursor: pointer;
-    background: @active;
-  }
-  h2 a,
-  h2 a:hover,
-  h2 a:visited,
-  h2 a:visited:hover {
-    color: black;
-    text-decoration: none;
-  }
-  p {
-    padding: 10px;
-    padding-bottom: 0;
-  }
-  ul {
-    list-style-type: none;
-    line-height: 1.2;
-    list-style-position: outside;
-    margin: 0;
-    padding: 10px;
+.nietgebruikt() {
     
-    li {
-      text-align: left;
-      background: #becdc3;
-      padding: 0;
-      display: block;
-      color: @txt !important;
-      margin-bottom: 0.5em;
-      a {
+  // niet gebruikt
+  div.begrippen-filter {
+    width: 200px;
+    position: absolute;
+    top: 0;
+    right: 30px;
+    z-index: 9;
+    background-color: #dfe6e1;
+    
+    border: 1px solid #becdc3;
+    
+    border-top: 0;
+    padding: 0;
+  
+    h2 {
+      background-color: #becdc3;
+      margin: 0;
+      padding: 10px;
+      font-weight: normal;
+      line-height: 1.2;
+    }
+    h2:hover {
+      cursor: pointer;
+      background: @active;
+    }
+    h2 a,
+    h2 a:hover,
+    h2 a:visited,
+    h2 a:visited:hover {
+      color: black;
+      text-decoration: none;
+    }
+    p {
+      padding: 10px;
+      padding-bottom: 0;
+    }
+    ul {
+      list-style-type: none;
+      line-height: 1.2;
+      list-style-position: outside;
+      margin: 0;
+      padding: 10px;
+      
+      li {
         text-align: left;
         background: #becdc3;
-        padding: 5px;
+        padding: 0;
         display: block;
         color: @txt !important;
-        text-decoration: none !important;
-        line-height: 1.6;
-
-        &.active {
-          background: @active;
-        }
-        &:hover {
+        margin-bottom: 0.5em;
+        a {
+          text-align: left;
+          background: #becdc3;
+          padding: 5px;
+          display: block;
+          color: @txt !important;
           text-decoration: none !important;
-          font-weight: bold;
+          line-height: 1.6;
+  
+          &.active {
+            background: @active;
+          }
+          &:hover {
+            text-decoration: none !important;
+            font-weight: bold;
+          }
         }
       }
     }
   }
+
 }
 
