--- a/css/stelselplaat-js-enabled.css
+++ b/css/stelselplaat-js-enabled.css
@@ -1,1 +1,1 @@
-.tab{display:none}.tab{left:0;position:absolute;top:105px;width:100%;padding-bottom:2em;overflow:hidden}.tab[style*="-600px"]{border:10px solid red;visibility:hidden}.leverancier ul+p{border-width:0 1px 1px;border-bottom:1px solid;font-size:10px;left:0;line-height:1em;position:absolute;top:488px}
+.tab{display:none}.tab{left:0;position:absolute;top:105px;width:100%;padding-bottom:2em;overflow:hidden}.tab[style*="-600px"]{border:10px solid red;visibility:hidden}h2{padding:.5em .5em 0 .5em}
