--- a/less/stelselplaat-js-enabled.less
+++ b/less/stelselplaat-js-enabled.less
@@ -1,4 +1,18 @@
-/* CSS-file used if JS is enabled. */
+
+/*
+ * ----------------------------------------------------------------------------------
+ * ICTU / WP Stelselplaat plugin
+ * ----------------------------------------------------------------------------------
+ * Description:   CSS-file used if JS is enabled.
+ * Version:       0.0.5
+ * Version desc:  SVG pijlen; mediaquery in JS. 
+ * Author:        Paul van Buuren
+ * Author URI:    https://wbvb.nl
+ * License:       GPL-2.0+
+ * @link          http://wbvb.nl/themes/wp-rijkshuisstijl/
+ * ----------------------------------------------------------------------------------
+ */
+
 .tab {
   display: none;
 }
@@ -17,12 +31,7 @@
   visibility: hidden;
 }
 
-.leverancier ul + p {
-  border-width: 0 1px 1px;
-  border-bottom: 1px solid;
-  font-size: 10px;
-  left: 0;
-  line-height: 1em;
-  position: absolute;
-  top: 488px;
+h2 {
+  padding: .5em .5em 0 .5em;
 }
+
