--- a/less/stelselplaat.less
+++ b/less/stelselplaat.less
@@ -6,8 +6,8 @@
  * Plugin Name:   ICTU / WP Stelselplaat plugin
  * Plugin URI:    https://wbvb.nl/plugins/rhswp-stelselcatalogus/
  * Description:   De mogelijkheid om een stelselplaat te tonen op een pagina
- * Version:       0.0.4
- * Version desc:  ACF velden aangepast. Waarden invoerdbaar.
+ * Version:       0.0.5
+ * Version desc:  SVG pijlen; mediaquery in JS. 
  * Author:        Paul van Buuren
  * Author URI:    https://wbvb.nl
  * License:       GPL-2.0+
@@ -70,7 +70,6 @@
 
     h2 {
       font-size: 1.5em;
-      padding: .5em .5em 0 .5em;
     }
     h3 {
       font-size: 1.3em;
@@ -79,7 +78,7 @@
 
     .stelsel {
       position: relative;
-      height: 500px;
+      height: 620px;
       margin: 0 20px 0 0;
 //      height: 100%;
       z-index: 100;
@@ -150,23 +149,23 @@
           font-family: Arial, Helvetica, sans-serif;
           background: @active;
           text-align: center;
-          color: @txt !important;
+          color: @txt;
           margin: 4px;
           
           &:hover,
           &:active,
           &:focus {
             text-decoration: none;
-            color: @txt !important;
-            background: none !important;
+            color: @txt;
+            background: none;
           }
         }
       }
 
     ul.tabs {
       clear: left;
-      margin: 0 0 -15px 0 !important;
-      padding: 10px 0 24px 50px !important;
+      margin: 0 0 -15px 0;
+      padding: 10px 0 24px 50px;
       
       &, li {
         list-style: none;
@@ -230,7 +229,7 @@
           .close {
             background: @color_gereed;
             text-decoration: none;
-            color: #fff !important;
+            color: #fff;
           }
 
           .tabs {
@@ -255,7 +254,7 @@
           .close {
             text-decoration: none;
             background: @color_nietgereed;
-            color: @txt !important;
+            color: @txt;
           }
           .tabs {
             background: none repeat scroll 0 0 @color_nietgereed_10pc;
@@ -297,7 +296,7 @@
   .stelsel .nietgereed > a,
   .stelsel .nietgereed .ik h3,
   .zij a.nietgereed {
-    color: @wit !important;
+    color: @wit;
   }
 
   .stelsel .gereed,
@@ -307,7 +306,7 @@
   .mod.box ul li.gereed,
   .br ul li.gereed {
     background: @color_gereed;
-    color: @wit !important;
+    color: @wit;
   }
 
   .stelsel .nietgereed,
@@ -317,13 +316,13 @@
   .mod.box ul li.nietgereed,
   .br ul li.nietgereed {
     background: @color_nietgereed;
-    color: @wit !important;
+    color: @wit;
   }
   
   .stelsel .gereed > a,
   .stelsel .gereed .ik h3,
   .zij a.gereed {
-    color: #fff !important;
+    color: #fff;
   }
   
 
@@ -331,10 +330,10 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100% !important;
-    height: 100% !important;
+    width: 100%;
+    height: 100%;
     z-index: 8;
-    background: url(../images/white-80.png) repeat scroll 0 0 transparent !important;
+    background: url(../images/white-80.png) repeat scroll 0 0 transparent;
   }
 
   /* Detailplaten in popup */
@@ -350,8 +349,8 @@
     margin-bottom: 15px;
 
     h3 {
-      background: none !important;
-      padding: 0 !important;
+      background: none;
+      padding: 0;
     }
 
   }
@@ -374,7 +373,7 @@
   }
 .br .ik li ul,
 .mod.box .ik li ul {
-    padding: 0 !important;
+    padding: 0;
   }
 .br .ik li li,
 .mod.box .ik li li {
@@ -393,7 +392,8 @@
 
     h3 {
       text-align: center;
-      margin: .5em 0 0 0;
+      margin: 0 0 .7em 0;
+      padding: .7em .5em;
       font-size: 90%;
     }
     
@@ -401,12 +401,12 @@
       background: yellow;
       width: 100%;
       clear: both;
-      background: none !important;
+      background: none;
       height: 2em;
       font-size: 80%;
       margin-bottom: 5px;
       position: relative;
-      border-style: none !important;
+      border-style: none;
 
       a {
         padding: .1em;
@@ -520,10 +520,6 @@
     }
   }
   
-  .leverancier {
-    clear: both;
-  }
-
 
 /*  
 .br .zij > ul > li,
@@ -531,7 +527,7 @@
 .mod.box .zij > ul > li {
     width: 60px;
     padding: 0 20px 0 0;
-    background: none !important;
+    background: none;
     height: 12px;
     float: right;
     position: relative;
@@ -577,7 +573,7 @@
   }
   
   .zij > ul {
-    padding: 0 !important;
+    padding: 0;
   }
 
 
@@ -604,6 +600,11 @@
   
   .leverancier {
     text-align: center;
+    clear: both;
+
+    ul {
+      overflow: hidden;
+    }
 
     li {
       padding: 5px 10px;
@@ -627,6 +628,12 @@
       &:hover em {
         display: block;
         z-index: 99;
+      }
+    }
+    .statusDoorlevering {
+      .visuallyhidden();      
+      + p {
+        .visuallyhidden();      
       }
     }
   }
@@ -794,6 +801,14 @@ div.br ul {
       height: 125px;
     }
   }
+
+  .br {
+    background: @wit;
+    padding: 1em;
+    margin: 1em;
+  }
+
+
 }
 
 .nietgebruikt() {
@@ -846,22 +861,22 @@ div.br ul {
         background: #becdc3;
         padding: 0;
         display: block;
-        color: @txt !important;
+        color: @txt;
         margin-bottom: 0.5em;
         a {
           text-align: left;
           background: #becdc3;
           padding: 5px;
           display: block;
-          color: @txt !important;
-          text-decoration: none !important;
+          color: @txt;
+          text-decoration: none;
           line-height: 1.6;
   
           &.active {
             background: @active;
           }
           &:hover {
-            text-decoration: none !important;
+            text-decoration: none;
             font-weight: bold;
           }
         }
@@ -870,4 +885,19 @@ div.br ul {
   }
 
 }
+
+//=========================================================================================================
+
+.visuallyhidden() {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
+//=========================================================================================================
 
