--- a/less/stelselplaat-js-enabled.less
+++ b/less/stelselplaat-js-enabled.less
@@ -4,8 +4,8 @@
  * ICTU / WP Stelselplaat plugin
  * ----------------------------------------------------------------------------------
  * Description:   CSS-file used if JS is enabled.
- * Version:       0.0.5
- * Version desc:  SVG pijlen; mediaquery in JS. 
+ * Version:       0.0.6
+ * Version desc:  Fallbacks voor pijlenschema. 
  * Author:        Paul van Buuren
  * Author URI:    https://wbvb.nl
  * License:       GPL-2.0+
