--- a/css/ie7.css
+++ b/css/ie7.css
@@ -1,19 +1,1 @@
-/* Fix for display inline-block */
-.ik,
-.zij {
-  zoom: 1;
-  display: inline;
-}
-.leverancier li {
-  display: inline;
-  margin-left: 2px;
-  margin-right: 2px;
-}
-.leverancier li em {
-  margin-top: 20px;
-  z-index: 999;
-}
-.leverancier ul + p {
-  width: 582px;
-}
-/*# sourceMappingURL=ie7.css.map */
+.ik,.zij{zoom:1;display:inline}.leverancier li{display:inline;margin-left:2px;margin-right:2px}.leverancier li em{margin-top:20px;z-index:999}.leverancier ul+p{width:582px}/*# sourceMappingURL=ie7.css.map */
