--- a/less/kleuren.less
+++ b/less/kleuren.less
@@ -20,26 +20,26 @@
 @black:                 black;
 @wit:                   #fff;
 @txt:                   @black;
-@active:                #275937;
+@active:                @rood_vol;
 
-@color_gereed:          #39870c;
-@color_gereed_10pc: 	#e1eddb;
-@color_gereed_20pc:		#c3dbb6;
+@color_gereed:            #39870c;
+@color_gereed_10pc:       #e1eddb;
+@color_gereed_20pc:       #c3dbb6;
 
-@color_nietgereed:      #f9e11e;  
-@color_nietgereed_10pc: #FDF6BB;
-@color_nietgereed_20pc: #fdf6bb;
+@color_nietgereed:        #f9e11e;  
+@color_nietgereed_10pc:   #FDF6BB;
+@color_nietgereed_20pc:   #fdf6bb;
 
-@color_nietgereed:          @donkerblauw_vol;
+@color_nietgereed:        @donkerblauw_vol;
 @color_nietgereed_10pc: 	@donkerblauw_licht;
 @color_nietgereed_20pc:		@donkerblauw_lichtst;
 
 
-@color_gereed:          @donkerblauw_vol;
-@color_gereed_10pc: 	@donkerblauw_licht;
-@color_gereed_20pc:		@donkerblauw_lichtst;
+@color_gereed:            @donkerblauw_vol;
+@color_gereed_10pc:       @donkerblauw_licht;
+@color_gereed_20pc:       @donkerblauw_lichtst;
 
-@txt_nietgereed:          	@wit;
+@txt_nietgereed:          @wit;
 
 
 
@@ -52,6 +52,12 @@
 //@color_gereed_10pc:     lighten( @color_gereed, 20% );
 //@color_gereed_20pc:     lighten( @color_gereed, 30% );
 
-@active:                red;
-@bg_ik:                 lightgray;
-@grijs: 				@bg_ik;
+@bg_ik:                 @grijs_1;
+@grijs: 				        @bg_ik;
+
+
+
+@break_javascriptenabled: 900px;
+@break_fullwidth:         1200px;
+@break_tablet:            650px;
+
