--- a/less/00-palet.less
+++ b/less/00-palet.less
@@ -8,8 +8,8 @@
 // * @author  Paul van Buuren
 // * @license GPL-2.0+
 // * @package wp-rijkshuisstijl
-// * @version 0.1.15
-// * @desc.   SVG images, Kleurcheck, CSS RHS, widgets, code-opschoning 
+// * Version:       1.0.1
+// * Version desc:  Oplevering. Dossierlink toegevoegd. 
 // * @link    http://wbvb.nl/themes/wp-rijkshuisstijl/
 // **
 
