Plugin URI aangepast

--- a/css/stelselplaat.css
+++ b/css/stelselplaat.css
@@ -3,7 +3,7 @@
  * ICTU / WP Stelselplaat plugin
  * ----------------------------------------------------------------------------------
  * Plugin Name:   ICTU / WP Stelselplaat plugin
- * Plugin URI:    https://wbvb.nl/plugins/rhswp-stelselcatalogus/
+ * Plugin URI:    https://github.com/ICTU/digitale-overheid-wordpress-plugin-stelselcatalogus/
  * Description:   De mogelijkheid om een stelselplaat te tonen op een pagina
  * Version:       1.0.5
  * Version desc:  Toegankelijkheidsissues. Bugfixes.
