--- a/css/stelselplaat-js-enabled.css
+++ b/css/stelselplaat-js-enabled.css
@@ -3,7 +3,7 @@
  * ICTU / WP Stelselplaat plugin
  * ----------------------------------------------------------------------------------
  * Description:   CSS-file used if JS is enabled.
- * Version:       1.0.5
+ * Version:       1.0.6
  * Version desc:  Toegankelijkheidsissues. Bugfixes.
  * Author:        Paul van Buuren
  * Author URI:    https://wbvb.nl
@@ -16,7 +16,7 @@
  * ICTU / WP Stelselplaat plugin
  * ----------------------------------------------------------------------------------
  * Plugin Name:   ICTU / WP Stelselplaat plugin
- * Plugin URI:    https://wbvb.nl/plugins/rhswp-stelselcatalogus/
+ * Plugin URI:    https://github.com/ICTU/digitale-overheid-wordpress-plugin-stelselcatalogus/
  * Description:   De mogelijkheid om een stelselplaat te tonen op een pagina
  * Version:       0.0.4
  * Version desc:  Blokken donkerblauw_vol gemaakt
