--- a/less/kleuren.less
+++ b/less/kleuren.less
@@ -3,7 +3,7 @@
  * ICTU / WP Stelselplaat plugin
  * ----------------------------------------------------------------------------------
  * Plugin Name:   ICTU / WP Stelselplaat plugin
- * Plugin URI:    https://wbvb.nl/plugins/rhswp-stelselcatalogus/
+ * Plugin URI:    https://github.com/ICTU/digitale-overheid-wordpress-plugin-stelselcatalogus/
  * Description:   De mogelijkheid om een stelselplaat te tonen op een pagina
  * Version:       0.0.4
  * Version desc:  Blokken donkerblauw_vol gemaakt
